--- a/my.kv
+++ b/my.kv
@@ -6,3 +6,45 @@ GridLayout:
         text: "Seja bem vindo(a) ao seu aplicativo!"
     Label:
         text: "Em Desenvolvimento"
+        
+ BoxLayout:
+        orientation: "horizontal"
+        size_hint_y: None
+        height: "40dp"
+        Label:
+            text: "Nome do item:"
+        TextInput:
+            id: item_name_input
+            multiline: False
+
+    BoxLayout:
+        orientation: "horizontal"
+        size_hint_y: None
+        height: "40dp"
+        Label:
+            text: "Quantidade:"
+        TextInput:
+            id: item_quantity_input
+            multiline: False
+
+    BoxLayout:
+        orientation: "horizontal"
+        size_hint_y: None
+        height: "40dp"
+        Label:
+            text: "Descrição:"
+        TextInput:
+            id: item_description_input
+            multiline: False
+
+    Button:
+        text: "Adicionar Item"
+        on_press: app.add_item()
+
+    ScrollView:
+        id: item_list_scroll
+        GridLayout:
+            id: item_list
+            cols: 1
+            size_hint_y: None
+            height: self.minimum_height
